--- a/assets/css/tablet.scss
+++ b/assets/css/tablet.scss
@@ -1,45 +1,141 @@
+.centered{
+	width: 760px;
+	margin: 0 auto;
+}
+
+#masthead{
+	@extend .centered;
+}
+
+#content{
+	@extend .centered;
+}
+
+footer nav, footer small{
+	@extend .centered;
+}
+hr{
+	@extend .centered;
+}
+
+
 header{
-	padding-top: 10px;
 	hgroup{
 		display: inline-block;
-		vertical-align: top;
-		width: 420px;
-
 		h1{
-			font-size: 50px;
-			margin-bottom: 40px;
+			font-size: 3.5em; 
+			display: inline-block;
+			vertical-align: top;
+			margin-right: .8em;
 		}
 		p{
-
-			font-size: 25px;
+			font-size: 1.3em;
+			padding-top: .3em;
+			margin-right: .8em;
+			display: inline-block;
 		}
 	}
 	nav{
 		display: inline-block;
-		padding-left: 0;
-		padding-right: 0;
-		ul{
-			padding-right: 0;
-			li{
-				padding-right: 0;
-				display: table-cell;
-				position: relative;
-				
-				span{
-					position: absolute;
-					display: block;
-					bottom: 6px;
-					text-align: center;
-					width: 161px;
-					font-size: 35px;
-					background-color: rgba(200, 200, 200, 0.7);
-					padding-top: 5px;
-					border-top: 1px solid #F00;
+	}
+	padding-bottom: .7em;
+}
 
+#home{
+	header{
+
+		hgroup{
+			display: inline-block;
+			width: 415px;
+			vertical-align: top;
+			h1{
+				display: block;
+				font-size: 4em;
+				margin-bottom: 20px;
+			}
+			p{
+				display: block;
+				font-size: 2.3em;
+			}
+		}
+
+		nav{
+			padding-top: 10px;
+			li{
+				display: inline-block;
+				a{
+					&:hover{
+						color: #FFFFFF;
+					}
+
+					position: relative;
+					span{
+						text-shadow: #333 2px 2px 2px;
+						z-index: 9999;
+						background-color: rgba(100,100,100, .5);
+						position:absolute;
+						padding: 5px 0;
+						left: 0;
+						bottom: 8px;
+						width: 160px;
+						text-align: center;
+						border: 1px solid #FF0000;
+						display: inline-block;
+					}
 				}
-			}	
+			}
+		}
+	}			
+}
+
+#content {
+
+
+	p, address, time{
+		font-size: 1.3em;
+	}
+
+
+	section{
+
+		h1{
+		font-size: 3em;
+		}
+		h2{
+			font-size: 2.2em;
+		}
+		h3{
+			font-size: 1.5em;
 		}
 		
+		hr{
+			display: none;
+		}
+		section{
+			vertical-align: top;
+			display: inline-block;
+			width: 335px;
+			
+
+			&:first-child{ padding-right: 40px; margin-right: 0; };
+			&:last-child{ padding-left: 40px; margin-left: 0; };
+			
+		}
+
+
 	}
 
 }
+
+.externalref{
+		text-align: right;
+	}
+
+footer{
+	nav{
+		li{
+			display: inline-block;
+			padding-right: 20px;
+		}
+	}
+}		
